<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AcercaDeActivity" >

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca"
        app:bootstrapBrand="secondary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:bootstrapBrand="warning"
        app:bootstrapHeading="h1"
        app:roundedCorners="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_des"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />



    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_desarrolla"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_montse"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_jp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_marce"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="69dp" />

    <com.beardedhen.androidbootstrap.BootstrapWell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        app:bootstrapSize="xl">
    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center" />
    </com.beardedhen.androidbootstrap.BootstrapWell>
</LinearLayout>