<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Holo.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollIndicators="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".PublicarActivity">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tvvacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/tv_ingresaRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ingresarRestaurante"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0C0505"
            android:textStyle="bold"
            app:bootstrapBrand="warning"
            app:bootstrapHeading="h3" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tvvacio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/tv_InformacionGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_InformacionGeneral"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold"
            app:bootstrapBrand="danger"
            app:bootstrapHeading="h5" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tvvacio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombreRestaurante"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#221414" />

        <EditText
            android:id="@+id/et_NombreRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_TipoCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tipoComida"
            android:textColor="#150D0D" />

        <EditText
            android:id="@+id/et_TipoComida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_Website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_sitioWeb"
            android:textColor="#130D0D" />

        <EditText
            android:id="@+id/et_SitioWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_linkOrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_linkOrdenar"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#090606" />

        <EditText
            android:id="@+id/et_OrderLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_rangoPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_rangoPrecio"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#090606" />

        <SeekBar
            android:id="@+id/sb_rangoPrecio"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:indeterminate="false"
            android:isScrollContainer="true"
            android:max="4"
            android:outlineProvider="background"
            android:overScrollMode="always"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:progress="3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/tv_DondeTeUbicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_dondeUbicas"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold"
            app:bootstrapBrand="danger"
            app:bootstrapHeading="h5" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_Ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ubicacion"
            android:textColor="#191010" />

        <EditText
            android:id="@+id/et_Ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_Latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_latitud"
            android:textColor="#1E1212" />

        <EditText
            android:id="@+id/et_Latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_Longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_longitud"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#171010" />

        <EditText
            android:id="@+id/et_Longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/tv_FotosLogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fotosLogos"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold"
            app:bootstrapBrand="danger"
            app:bootstrapHeading="h5" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_FotoPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fotoPerfil"
            android:textColor="#150E0E" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_buscarP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_fotoPerfil"
                android:textColor="#FFFFFF"
                app:iconTint="#FFFFFF"
                app:showOutline="true"
                app:roundedCorners="true"
                app:bootstrapSize="md"
                app:bootstrapBrand="danger" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/tv_ImagenComida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_imagenPlato"
            android:textColor="#231414" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_buscarC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_imagenPlato"
                app:showOutline="true"
                app:roundedCorners="true"
                app:bootstrapSize="md"
                app:bootstrapBrand="danger" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_imagenMenu"
            android:textColor="#131010" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_buscarM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_imagenMenu"
                app:showOutline="true"
                app:roundedCorners="true"
                app:bootstrapSize="md"
                app:bootstrapBrand="danger" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/bt_IngresarRestaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_ingresarRest"
            app:showOutline="false"
            app:roundedCorners="true"
            app:bootstrapSize="lg"
            app:bootstrapBrand="danger" />

    </LinearLayout>
</ScrollView>