<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RestauranteActivity">

    <ImageView
        android:id="@+id/imgComida"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPerfil"
            android:scaleType="centerCrop"
            android:layout_width="78dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvtipoComida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/middleDot" />

        <TextView
            android:id="@+id/tvUbic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/middleDot" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/galleryMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btVisitar"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:text="@string/visitar" />

        <Button
            android:id="@+id/btOrdenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ordenar" />
    </LinearLayout>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="match_parent"
        android:layout_height="129dp" />

</LinearLayout>